test/visibility/import/rename/same_name_in_mod2.good
same_name_in_mod2.chpl:7: error: symbol F is multiply defined
same_name_in_mod2.chpl:1: note: symbol 'Foo', defined here, was renamed to 'F' at same_name_in_mod2.chpl:5
