test/visibility/import/rename/same_name_in_mod2.chpl
module Foo {
  var x: int = 5;
}
module User {
  import Foo as F;

  var F: int;

  proc main() {
    writeln(F.x);
  }
}
